--- a/templates/login2.html
+++ b/templates/login2.html
@@ -18,7 +18,7 @@
   </div>
   <h2 class="subheading">SHOP</h2>
   <div class="login-box">
-    <form action="{{ url_for('login2') }}" method="post">
+    <form action="{{ url_for('login2') }}" class = "login-box" method="post">
       <div class="login">
         <div class="login-container">
           <input type="text" name="phone_number" class="login-bar" placeholder="Phone Number" />
@@ -30,6 +30,8 @@
         </div>
       </div>
       <div class="login">
+        <a href="/signup" class="login-action">Sign Up</a>
+        <!-- <button class="login-action">Sign Up</button> -->
         <button type="submit" class="login-action">Login</button>
       </div>
       
