--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -28,6 +27,73 @@
 
 ::-webkit-resizer {
   background-color: #666;
+}
+
+form {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.value-button {
+  display: inline-block;
+  margin: 0px;
+  width: 40px;
+  height: 23px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 10px 0;
+  background: #323333;
+  color: #f5eab6;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.value-button:hover {
+  cursor: pointer;
+}
+
+form #decrease {
+  margin-right: -5px;
+  border-radius: 8px 0 0 8px;
+}
+
+form #increase {
+  margin-left: -5px;
+  border-radius: 0 8px 8px 0;
+}
+
+.quantity {
+  position: absolute;
+  left: 115%;
+}
+
+input#number {
+  text-align: center;
+  border: none;
+  /* border-top: 1px solid #ddd; */
+  border-bottom: 1px solid #ddd;
+  background-color: #f5eab6;
+  color: #323333;
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 body {
@@ -163,7 +229,6 @@ a:hover {
   background: #323333;
   border-radius: 15px;
   margin: 50px 5px 25px 50px;
-
 }
 
 .browse-picture {
@@ -171,7 +236,10 @@ a:hover {
   width: 200px;
   height: 100%;
   border-radius: 15px 0px 0px 15px;
-  /* background: url(omega-speedmaster-310-30-42-50-01-001.jpg); */
+  background: url(watch_picture.jpg);
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
   background-color: black;
 }
 
@@ -242,7 +310,10 @@ a:hover {
   width: 350px;
   height: 100%;
   border-radius: 15px 0px 0px 15px;
-  /* background: url(omega-speedmaster-310-30-42-50-01-001.jpg); */
+  background: url(watch_picture.jpg);
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
   background-color: black;
 }
 
@@ -302,8 +373,8 @@ a:hover {
 
 .login-container {
   position: relative;
-  margin-top: 25px;
-  width: 70%;
+  margin: 25px 15px 0px 15px;
+  width: 400px;
   height: 75px;
   background: #323333;
   border-radius: 15px;
@@ -329,10 +400,10 @@ a:hover {
 
 .login-box {
   position: absolute;
-  width: 550px;
+  width: 650px;
   left: 50%;
   top: 25%;
-  height: 450px;
+  height: 400px;
   padding-top: 75px;
   background: #111111;
   border-radius: 15px;
@@ -340,7 +411,7 @@ a:hover {
 }
 
 .login-action {
-  margin-top: 50px;
+  margin: 50px 15px 0px 15px;
   width: 250px;
   height: 70px;
   font-family: "Poppins", sans-serif;
@@ -369,7 +440,10 @@ a:hover {
   width: 150px;
   height: 100%;
   border-radius: 15px 0px 0px 15px;
-  /* background: url(omega-speedmaster-310-30-42-50-01-001.jpg); */
+  background: url(watch_picture.jpg);
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
   background-color: black;
 }
 
